chsdi/public/GeoAdmin.ux/TreePanel/css/treepanel.css
/* From main.css (mf-are2) */

.x-panel-header,
.x-tab-strip-top .x-tab-right, .x-tab-strip-top .x-tab-left, .x-tab-strip-top .x-tab-strip-inner,
.x-tab-strip span.x-tab-strip-text {
    background-image: none;
    background-color: #333;
}

.x-panel-header,
.x-tab-strip span.x-tab-strip-text {
    color: white;
    text-align: center;
}

.x-tab-strip-top .x-tab-strip-active .x-tab-right span.x-tab-strip-text,
.x-tab-strip-top .x-tab-strip-active .x-tab-right,
.x-tab-strip-top .x-tab-strip-active .x-tab-left {
    background-color: red;
}



#legendAction {
    cursor: pointer;
    color: #FFFFFF;
    text-align: center;
    width: 70px;
    height: 70px;
    background-color: #ffffff;
    position: absolute;
    top: 5px;
    right: 3px;
    float: right;
    background-image: url(../images/legend.gif);
    background-repeat: no-repeat;
}
.metadata {
    background-image: url(../images/info_button_black.png);
    color: #FFFFFF;
    cursor: pointer;
    width: 17px;
    height: 18px;
    float: right;
    position: relative;
    margin-right: 10px;
    margin-top: -18px;
    line-height: 16px;
}


.ext-ie .metadata {
    margin-top: -18px;
}

.x-tree-node-expanded .x-tree-node-icon {
    background-image: url("../images/folder-open.gif");
}

.x-tree-node-leaf .x-tree-node-icon{
	/* background-image:url(../images/leaf.gif);  */
    background-image: none
}

.x-tree-node-collapsed .x-tree-node-icon{
	background-image:url(../images/folder.gif);
}

.x-tree-lines .x-tree-elbow{
	background-image:url(../images/elbow.gif);
}

.x-tree-lines .x-tree-elbow-plus{
	background-image:url(../images/elbow-plus.gif);
}

.x-tree-lines .x-tree-elbow-minus{
	background-image:url(../images/elbow-minus.gif);
    /*color: #ff0000;*/
}

.x-tree-lines .x-tree-elbow-end{
	background-image:url(../images/elbow-end.gif);
}

.x-tree-lines .x-tree-elbow-end-plus{
	background-image:url(../images/elbow-end-plus.gif);
}

.x-tree-node-expanded a span{
    color: #ff0000;
}

.x-tree-lines .x-tree-elbow-end-minus{
	background-image:url(../images/elbow-end-minus.gif);
    /*color: #ff0000;*/
}

.x-tree-lines .x-tree-elbow-line{
	background-image:url(../images/elbow-line.gif);
}

.x-tree-node .x-tree-node-over
{
background-color: #ffffff;
}

.x-tree-node .x-tree-selected {
	background-color: #ffffff;
    color: red;
}

.treelayerpipe {
  float: left;
  margin-top: 2px;
  padding: 0 !important;
  width: 1px;
  height: 19px !important;
  cursor: pointer;
  background-image: url(../images/lt_pipe.png);
}

.checkboxOff, .checkboxOn {
  float: left;
  margin-top: 2px;
  margin-left: 2px;
  padding: 0 !important;
  width: 19px;
  height: 19px !important;
  cursor: pointer;
  background-image: url(../images/lt_selection-sprite.png);
  /*  */
  background-position: 0px -19px;
}
.nodeBackgroundSelected .checkboxOff, .nodeBackgroundSelected .checkboxOn {
  margin-top: 1px;
}


input.x-tree-node-cb {
    visibility: hidden;
}

div.x-tree-node-leaf a.x-tree-node-anchor span {
    margin-left: -30px;
}

/* used */
.checkboxOff {
  background-position: -17px 0;
}
.nodeBackgroundSelected .checkboxOff {
  background-position: -17px 19px;
}

.nodeTP3 .treelayerlink, .nodeTP3selected .treelayerlink {
  float: left;
  padding: 0 !important;
  width: 17px;
  height: 19px !important;
  cursor: pointer;
}

.nodeTP3 .treelayerlink {
  background-image: url(../images/info_button_black.png);
}
.nodeTP3selected .treelayerlink {
  background-image: url(../images/info_button_red.png);
}

.layerNodeTools {
  float: right;
  clear: left;
  height: 19px !important;
  margin-top: -25px;
  width: 45px;
}


.nodeTP3selected {
    color: red !important;
}

.nodeTP3selected .x-tree-node-expanded .x-tree-node-icon {
    background-image: url("../images/leaf_red.png");
    /*color: #ff0000;*/
}
div.nodeTP3selected > img.x-tree-node-icon   {

    background-image: none; /*url("../images/leaf_red.png");  */

}

div.nodeTP3selected >  a.x-tree-node-anchor span {
    color: #ff0000;
}

/* overload everything */
.ext-ie UL.x-tree-node-ct {
    line-height: 0;
    font-size: 0px;
}

.ext-chrome .geoadmin-treepanel .layernodetools {
  margin-top: -1px;
}

.ext-ie .layerNodeTools {
  margin-top: 0px;
}

.ext-safari .layerNodeTools {
  margin-top: 0px;
}

